# currency-api

./: .env.template  .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pylint.yml
docs/: api.yml
src/: app.py  requirements.txt
src/api/: main.py
src/controllers/: controller.py  currency_controller.py
src/core/: router.py
src/helpers/: render.py
src/managers/: __init__.py  currency_db_manager.py  db_manager.py
src/migrations/: env.py
src/migrations/versions/: 0abc76dd8cdc_create_currency_table.py  e9fc7c0f4448_add_currency_model.py
src/models/: base.py  currency.py
src/routes/: currency_router.py
tests/test_controllers/: test_controller.py
tests/test_controllers/test_currency_controller/: test_delete_history.py  test_get_currency_price.py  test_get_history.py
